--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ span, .icon{
 .carousel-caption button{
     font-family: 'Times New Roman', Times, serif;
     text-transform: uppercase;
+    
 }
 
 .span{
@@ -100,18 +101,6 @@ span, .icon{
     
 }
 
-.descricao{
-    position: absolute;
-    top: 25%;
-    left: 8%;
-    text-align: center;
-    margin: 8px;
-    color: red;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: bold;
-    text-transform: uppercase;
-    
-}
 
 .box{
     margin-bottom: 20px;
@@ -139,6 +128,54 @@ a{
 a:hover{
     text-decoration: none;
     color: white;
+}
+
+@media(min-width: 300px){
+
+    .box{
+        margin-left: 60px;
+    }
+
+
+    .contato{
+        margin-left: 60px;
+    }
+
+    @media(min-width: 400px){
+        .box{
+            margin-left: 80px;
+        }
+
+        .contato{
+            margin-left: 80px;
+        }
+
+
+    }
+
+    @media(min-width: 500px){
+        .box{
+            margin-left: 140px;
+        }
+
+        .contato{
+            margin-left: 120px;
+        }
+
+    }
+
+    @media(min-width: 700px){
+        .box{
+            margin-left: auto;
+            margin-right: auto;
+            
+        }
+
+        .contato{
+            margin: auto;
+        }
+    }
+
 }
 
 
